--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <style id="stndz-style"></style>
-    <title>Pawan Jain</title>
+    <title>umesh sharma</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Hind+Madurai|Montserrat:300,700" rel="stylesheet">
     <!-- Fevicon -->
@@ -21,7 +21,7 @@
     <div class="main">
         <div class="container">
             <span class="hi">Hi 👋, I am</span>
-            <h1>Pawan Jain</h1>
+            <h1>umesh sharma</h1>
             <div class="h">
                 <h2>I am </h2>
                 <h2 class="heading"><i class="ti-placeholder" style="display:inline-block;width:0;line-height:0;overflow:hidden;">.</i><span style="display:inline;position:relative;font:inherit;color:inherit;" class="ti-container">an Ent</span><span style="display: inline; position: relative; font: inherit; color: inherit; opacity: 0.021644;" class="ti-cursor">|</span></h2>
